User Interface Technologies

--- a/javascript_validation.html
+++ b/javascript_validation.html
@@ -36,7 +36,7 @@ alert("enter last name");
 <form>
 Enter first name:<input type="text" id="fname"><br><br>
 Enter last name:<input type="text" id="lname"><br><br>
-<button type="submit" onClick="return displayValue();">validate</button>
+<button type="submit" onClick="return validate();">validate</button>
 </form>
 </body>
 </html>
